--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,11 +36,11 @@ jobs:
               command: |
                 docker --version
                 docker login -u=$DOCKER_LOGIN -p=$DOCKER_PASSWORD
-                docker build -t <docker_account>/<application_name>:$CIRCLE_BRANCH --build-arg MACHINE_NAME=<application_name>-$CIRCLE_BRANCH .
-                docker push <docker_account>/<application_name>:$CIRCLE_BRANCH
-                echo "Docker build made sucessfully!! for <application_name> $CIRCLE_BRANCH"
+                docker build -t buendi/appnode:$CIRCLE_BRANCH --build-arg MACHINE_NAME=<application_name>-$CIRCLE_BRANCH .
+                docker push buendi/appnode:$CIRCLE_BRANCH
+                echo "Docker build made sucessfully!! for appnode $CIRCLE_BRANCH"
            - run:
               name: Build Failure
               when: on_fail
               command: |
-                echo "ERROR building <application_name> $CIRCLE_BRANCH"
+                echo "ERROR building appnode $CIRCLE_BRANCH"
